📦 update favicon, and linked normalize.css

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="shortcut icon" href="https://www.humanrightsfirst.org/sites/all/themes/hrf/favicon.ico" type="image/vnd.microsoft.icon">
+
+    <!-- add normalize css  -->
+    <link rel="stylesheet" href="../src/styles/normalize.css">
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!-- <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@500&display=swap"
